<resources>
    <string name="app_name">Stories</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="user_profile_image">User profile image</string>
    <string name="heading">How was today</string>
    <string name="add_a_heading">Add a heading</string>
    <string name="post">Post</string>
    <string name="write_something_here">Write something here</string>

    <string name="post_count">%s Posts</string>
    <string name="follower_count">%s Followers</string>
    <string name="following_count">%s Following</string>
    <string name="log_in">Log in</string>
    <string name="welcome_tap_login_to_continue">Welcome, Tap login to continue</string>
    <string name="app_walkthrough_text">The Stories app is a fictional journal app, where one could become superheros and write stories and experiences they had ( fictional obviously). The app aims to improve users creative thinking and let out their imaginations.</string>
</resources>
